# SoroPool

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Plan.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  package.json  tsconfig.spec.json
contracts/: Cargo.toml  rust-toolchain.toml
contracts/concentrated-liquidity-pool/: Cargo.toml
contracts/concentrated-liquidity-pool/src/: fee_growth.rs  lib.rs  position.rs  sqrt_price.rs  tick.rs
contracts/constant-product-pool/: Cargo.toml
contracts/constant-product-pool/src/: events.rs  fees.rs  lib.rs  liquidity.rs  math.rs  swap.rs  twap.rs
contracts/constant-product-pool/test_snapshots/: test_add_initial_liquidity.1.json  test_add_liquidity_deadline_expired.1.json  test_add_liquidity_slippage.1.json  test_add_subsequent_liquidity.1.json  test_empty_reserves_spot_price.1.json  test_flash_swap_invariant_violation.1.json  test_get_reserves_after_init.1.json  test_get_reserves_after_liquidity.1.json  test_get_spot_price.1.json
contracts/constant-product-pool/tests/: test.rs
contracts/farm/: Cargo.toml
contracts/farm/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/lp-token/: Cargo.toml
contracts/lp-token/src/: lib.rs  storage.rs
contracts/lp-token/tests/: test.rs
contracts/pool-factory/: Cargo.toml
contracts/pool-factory/src/: deploy.rs  events.rs  lib.rs  storage.rs
contracts/pool-factory/tests/: test.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  path.rs  quote.rs
contracts/scripts/: create-pool.sh  deploy.sh  verify.sh
contracts/shared/: Cargo.toml
contracts/shared/src/: error.rs  lib.rs  math.rs  types.rs
contracts/stableswap-pool/: Cargo.toml
contracts/stableswap-pool/src/: amplification.rs  invariant.rs  lib.rs  storage.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/twap-oracle/: Cargo.toml
contracts/twap-oracle/src/: lib.rs
frontend/: Dockerfile  angular.json  (+3 more)
(+209 files in other folders)
