[package]
name = "soropool-pool-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soropool-shared = { path = "../shared" }
soropool-constant-product-pool = { path = "../constant-product-pool", optional = true }
soropool-stableswap-pool = { path = "../stableswap-pool", optional = true }
soropool-concentrated-liquidity-pool = { path = "../concentrated-liquidity-pool", optional = true }

[features]
default = []
test-deploy = [
    "soropool-constant-product-pool",
    "soropool-stableswap-pool",
    "soropool-concentrated-liquidity-pool",
]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
